<resources>
    <string name="app_name">Lyf Listing</string>

    <!-- Google Tag Manager Container ID -->
    <string name="google_tag_manager_container_id_prod">GTM-PW7GFD</string>
    <string name="google_tag_manager_container_id_debug">GTM-NGVKD4</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_search">Search</string>

    <string name="no_activity_to_share">No application available to share the experience</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="bank_prompt">Bank Name</string>
    <string name="account_prompt">Account Type</string>

    <string name="drawer_open">Open Navigation Drawer</string>
    <string name="drawer_close">Close Navigation Drawer</string>

    <string name="my_money_page_title">My Money</string>
    <string name="settings">Settings</string>
    <string name="show">SHOW</string>
    <string name="hide">HIDE</string>
    <string name="invalid_phone">Must be a valid phone number</string>
    <string name="required_field">This field is required</string>
    <string name="invalid_email">Must be a valid email address</string>
    <string name="invalid_account_number">Must be 10 characters or more</string>
    <string name="input_too_short">Must be more than 6 characters</string>
    <string name="sign_up_button_text"><![CDATA[New here? <font color=\'#E94B0A\'>Sign Up!</font>]]></string>
    <string name="sans_font_family">sans</string>
    <string name="mobile">Mobile</string>
    <string name="password">Password</string>
    <string name="forgot_password">forgot password?</string>
    <string name="forgot_password_page_title">Forgot Password?</string>
    <string name="signin">SIGN IN</string>
    <string name="signup">SIGN UP</string>
    <string name="password_hint">Password (Min. 6 characters)</string>
    <string name="email">Email</string>
    <string name="full_name">Full Name</string>
    <string name="sign_in_button_text"><![CDATA[Already a member? <font color=\'#E94B0A\'>Sign In!</font>]]></string>
    <string name="update_bank_fragment">Update Bank Account Details</string>
    <string name="verify_phone_fragment">Verify Your Phone Number</string>
    <string name="resend_verify_button_text"><![CDATA[<font color=\'#E94B0A\'>Click here</font> to resend verification code]]></string>
    <string name="reset_password_button_text"><![CDATA[Already have a reset code? <font color=\'#E94B0A\'>Click here!</font>]]></string>
    <string name="reset_password_title">Reset Password</string>
    <string name="resend_reset_code_button_text"><![CDATA[<font color=\'#E94B0A\'>Click here</font> to resend reset code]]></string>
    <string name="enter_password_reset_code">Password Reset Code</string>
    <string name="save">Save</string>
    <string name="send_code">Send Code</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="password_reset_info_text">A password reset code will be sent to phone afterwards.</string>
    <string name="account_name">Account Name</string>
    <string name="account_number">Account Number</string>
    <string name="skip">Skip</string>
    <string name="verify">Verify</string>
    <string name="enter_phone_verification_code">Enter phone verification code</string>
    <string name="add_now">ADD NOW</string>
    <string name="add_business">ADD BUSINESS</string>
    <string name="no_balance_available">No Balance Available!</string>
    <string name="no_business_added">No Business Added!</string>

</resources>
