<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/signInForm"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:layout_marginTop="@dimen/space_large"
    android:orientation="vertical"
    android:visibility="visible">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/space_small"
        android:layout_marginTop="@dimen/space_small_xx">

        <EditText
            android:id="@+id/mobile"
            style="@style/edit_text_style"
            android:drawableLeft="@drawable/phone"
            android:drawablePadding="@dimen/space_small_x"
            android:hint="@string/mobile"
            android:inputType="phone" />

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/space_small"
        android:layout_marginTop="@dimen/space_small_xx">

        <EditText
            android:id="@+id/password"
            style="@style/edit_text_style"
            android:drawableLeft="@drawable/password"
            android:drawablePadding="@dimen/space_small_x"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingRight="@dimen/space_custom" />

        <Button
            android:id="@+id/showSignInPassword"
            style="@style/plain_button_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            android:padding="@dimen/space_small_x"
            android:text="@string/show"
            android:textSize="@dimen/text_small"
            android:textStyle="bold" />
    </FrameLayout>

    <Button
        android:id="@+id/forgetPassword"
        style="@style/plain_button_style"
        android:layout_width="wrap_content"
        android:layout_gravity="right|bottom"
        android:layout_marginTop="@dimen/space_small_x"
        android:layout_weight="0.2"
        android:gravity="right|center"
        android:padding="@dimen/space_small_x"
        android:text="@string/forgot_password" />

    <LinearLayout
        android:id="@+id/sectionButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_medium"
        android:orientation="vertical"
        android:visibility="visible">

        <Button
            android:id="@+id/signInButton"
            style="@style/submit_button_style"
            android:text="@string/signin" />

        <ProgressBar
            android:id="@+id/signInProgressBar"
            style="?android:attr/progressBarStyleInverse"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="gone" />
    </LinearLayout>

    <Button
        android:id="@+id/showSignUpForm"
        style="@style/plain_button_style"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/space_large"
        android:layout_weight="0.2"
        android:gravity="center"
        android:text="@string/sign_up_button_text" />
</LinearLayout>
