<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:id="@+id/empty_view"
        android:layout_width="@dimen/space_xxx_large"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/no_business_added"
            android:textColor="@color/grey"
            android:textSize="@dimen/text_xx_large" />

        <LinearLayout
            android:id="@+id/view_group_add_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_medium"
            android:background="@color/colorAccent"
            android:clickable="true"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="@dimen/space_small_xx_c">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@string/sans_font_family"
                android:gravity="center"
                android:text="@string/add_now"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="@dimen/text_medium"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/space_small_xx"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:src="@drawable/button_add" />

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>